--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -10,7 +10,6 @@
 
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/custom.css">
     <!-- Favicon and touch icons -->
     <link rel="shortcut icon" href="assets/ico/favicon.png">
 
@@ -19,20 +18,17 @@
 <body>
     <div class="container ">
         <div class="row">
-            <div class="login-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
-                <div class="login-content">
-                    <div class="login-header ">
-                        <h5>Enter Email to receive password reset link</h5>
-                    </div>
-                    <div class="login-body">
+            <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
+                    <div class="form-body">
                         <form role="form" class="was-validated">
+                            <div class="form-title">
+                                <h5>Enter Email to receive password reset link</h5>
+                            </div>                            
                             <div class="form-group ">
-                                <div class="pos-r">
                                     <input id="email" type="email" name="email" id="email" placeholder="Email"
                                         class="form-control" required>
                                     <i class="fa fa-envelope" aria-hidden="true"></i>
                                     <div class="invalid-feedback">Fill field</div>
-                                </div>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-warning form-control"><strong>Forgot Password
@@ -42,10 +38,10 @@
                         <div class="login-footer text-center template">
                             Don't have an account?<a href="register.html" class="bold"> Sign up </a>
                         </div>
-                    </div> <!-- end  login-body -->
-                </div><!-- end  login-content -->
+                    </div> <!-- end  form-body -->
+
                 
-            </div> <!-- end  login-container -->
+            </div> <!-- end  form-container -->
 
         </div>
     </div><!-- end container -->
