--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Login form</title>
+    <title>Register form</title>
 
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
@@ -21,59 +21,52 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="login-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
-            <div class="login-content">
-                <div class="login-title">
-                    <center>
-                        <h3><a href="index.html" class="nav-link">EzzBuy</a></h3>
-                    </center>
-                </div>
-            </div>
+        <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
                         <form role="form" name="regForm" class="was-validated">
+                            <div class="form-title">
+                                <center>
+                                    <h3><a href="index.html" class="nav-link">EzzBuy</a></h3>
+                                </center>
+                            </div>
                             <div class="form-group ">
-                                <div class="pos-r">
                                     <input id="username" type="text" name="username" placeholder="Username"
                                         class="form-control" required>
                                     <i class="fa fa-user"></i>
                                     <div class="invalid-feedback">Enter a username</div>
                                     <span></span>
-                                </div>
                             </div>
                             <div class="form-group ">
-                                <div class="pos-r">
+
                                     <input id="email" type="email" name="email" placeholder="Email"
                                         class="form-control" required>
                                     <i class="fa fa-envelope"></i>
                                     <div class="invalid-feedback">Enter a valid email</div>
                                     <span></span>
-                                </div>
                             </div>
                             <div class="form-group ">
-                                <div class="pos-r">
+
                                     <input id="phone" type="number" name="phone" placeholder="Phone Number"
                                         class="form-control" required>
                                         <i class="fa fa-phone"></i>
                                         <div class="invalid-feedback">Enter a phone number</div>
                                     <span></span>
-                                </div>
                             </div>
                             <div class="form-group">
-                                <div class="pos-r">
+
                                     <input id="password" type="password" name="password"
                                         placeholder="Password" class="form-control" required>
                                         <i class="fa fa-lock"></i>
                                         <div class="invalid-feedback">filll this field</div>
                                     <span></span>
-                                </div>
                             </div>
                             <div class="form-group">
-                                <div class="pos-r">
+
                                     <input id="password2" type="password" name="password2"
                                         placeholder="Confirm Password" class="form-password form-control">
                                         <i class="fa fa-lock"></i>
                                         <div class="error" id="passw2Err"></div>
                                     <span></span>
-                                </div>
+
                             </div>
                             <div class="form-group form-check">
                             <label for="term">
@@ -89,8 +82,8 @@
                             <button class="btn btn-warning btn-block" type="submit">Sign Up</button>
 
                         </form>
-                    </div><!-- end  login-content -->
-            </div> <!-- end  login-container -->
+                    </div><!-- end  form-content -->
+            </div> <!-- end  form-container -->
 
         </div>
     </div><!-- end container -->
