--- a/login.html
+++ b/login.html
@@ -19,9 +19,8 @@
 <body>
     <div class="container ">
         <div class="row">
-            <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
-
-                        <form role="form" class="was-validated">
+            <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-container ">
+                        <form role="form">
                              <div class="form-title">
                                 <center>
                                     <h3><a href="index.html" class="nav-link"> EzzBuy</a></h3>
@@ -34,19 +33,13 @@
                                 <a href="https://www.facebook.com" class="btn btn-block btn-facebook"> <i class="fab fa-facebook-f"></i>   Login via
                                     facebook</a>
                             </p> -->
-                            <div class="form-group ">
+                            <div class="form-group">
                                     <input id="userid" type="text" name="form-username" placeholder="Username or Email"
-                                        class="form-control" required>
-                                    <i class="fa fa-user"></i>
-                                    <div class="invalid-feedback">Enter username or email</div>
-                                    <span></span>
+                                        class="form-control" >                 
                             </div>
                             <div class="form-group">
                                     <input id="password" type="password" name="form-password"
-                                        placeholder="Password" class="form-control" required>
-                                    <i class="fa fa-lock"></i>
-                                    <div class="invalid-feedback">Enter password</div>
-                                    <span></span>
+                                        placeholder="Password" class="form-control" >
                             </div>
                             <div class="form-group text-right">
                                 <a href="forgotpassword.html" class="bold"> Forgot password?</a>
