--- a/register.html
+++ b/register.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css">
     <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="assets/ico/favicon.png">
     <link rel="stylesheet" href="style.css">
     <script src="forus.js"></script>
 
@@ -22,7 +21,7 @@
 <div class="container">
     <div class="row">
         <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
-                        <form role="form" name="regForm" class="was-validated">
+                        <form role="form" name="regForm">
                             <div class="form-title">
                                 <center>
                                     <h3><a href="index.html" class="nav-link">EzzBuy</a></h3>
@@ -30,48 +29,27 @@
                             </div>
                             <div class="form-group ">
                                     <input id="username" type="text" name="username" placeholder="Username"
-                                        class="form-control" required>
-                                    <i class="fa fa-user"></i>
-                                    <div class="invalid-feedback">Enter a username</div>
-                                    <span></span>
+                                        class="form-control" >
                             </div>
                             <div class="form-group ">
-
                                     <input id="email" type="email" name="email" placeholder="Email"
-                                        class="form-control" required>
-                                    <i class="fa fa-envelope"></i>
-                                    <div class="invalid-feedback">Enter a valid email</div>
-                                    <span></span>
+                                        class="form-control">
                             </div>
                             <div class="form-group ">
-
                                     <input id="phone" type="number" name="phone" placeholder="Phone Number"
-                                        class="form-control" required>
-                                        <i class="fa fa-phone"></i>
-                                        <div class="invalid-feedback">Enter a phone number</div>
-                                    <span></span>
+                                        class="form-control">
                             </div>
                             <div class="form-group">
-
                                     <input id="password" type="password" name="password"
-                                        placeholder="Password" class="form-control" required>
-                                        <i class="fa fa-lock"></i>
-                                        <div class="invalid-feedback">filll this field</div>
-                                    <span></span>
+                                        placeholder="Password" class="form-control" >
                             </div>
                             <div class="form-group">
-
                                     <input id="password2" type="password" name="password2"
                                         placeholder="Confirm Password" class="form-password form-control">
-                                        <i class="fa fa-lock"></i>
-                                        <div class="error" id="passw2Err"></div>
-                                    <span></span>
-
                             </div>
                             <div class="form-group form-check">
                             <label for="term">
-                                <input class="form-group-check" type="checkbox" name="term" id="term" required> Accept Terms and Condition
-                                <div class="invalid-feedback">Check box to continue</div>
+                                <input class="form-group-check" type="checkbox" name="term" id="term" > Accept Terms and Condition
                             </div>
 
                             <p>By creating an account you agree to our <a href="#">Terms &
