--- a/forgotpassword.html
+++ b/forgotpassword.html
@@ -20,13 +20,15 @@
         <div class="row">
             <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
                     <div class="form-body">
-                        <form role="form" >
+                        <form role="form" class="was-validated">
                             <div class="form-title">
                                 <h5>Enter Email to receive password reset link</h5>
                             </div>                            
                             <div class="form-group ">
                                     <input id="email" type="email" name="email" id="email" placeholder="Email"
-                                        class="form-control">
+                                        class="form-control" required>
+                                    <i class="fa fa-envelope" aria-hidden="true"></i>
+                                    <div class="invalid-feedback">Fill field</div>
                             </div>
                             <div class="form-group">
                                 <button type="submit" class="btn btn-warning form-control"><strong>Forgot Password
