logo added nav color

--- a/login.html
+++ b/login.html
@@ -20,12 +20,12 @@
 <body>
     <div class="container ">
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-container ">
+            <div class="col-lg-4 col-md-6 col-sm-8 col-xs-12 form-container text-center">
                         <form role="form">
-                             <div class="form-title">
-                                <center>
-                                    <h3><a href="index.html" class="nav-link"> EzzBuy</a></h3>
-                                </center>
+                              <div class="form-title">
+                                    <a href="index.html" class="nav-link">
+                                        <img src="log.jpg" height="100px" width="100px">
+                                    </a>
                             </div>
                             <div class="form-body">
                             <!-- <p>
