--- a/register.html
+++ b/register.html
@@ -20,12 +20,12 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
+        <div class="form-container col-lg-4 col-md-6 col-sm-12 col-xs-12 mp-auto">
                         <form role="form" name="regForm">
                             <div class="form-title">
-                                <center>
-                                    <h3><a href="index.html" class="nav-link">EzzBuy</a></h3>
-                                </center>
+                                    <a href="index.html" class="nav-link">
+                                        <img src="log.jpg" height="100px" width="100px">
+                                    </a>
                             </div>
                             <div class="form-group ">
                                     <input id="username" type="text" name="username" placeholder="Username"
