--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <title>Hello, world!</title>
   </head>
   <body style="margin-top: 84px;">
-        <nav class="navbar navbar-expand-sm navbar-light bg-light fixed-top">
-            <a href="#" class="navbar-brand">EzzBuy</a>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top">
+            <a href="#" class="navbar-brand"><img src="log.jpg" height="50px" width="100px"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
             data-target="#list">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,40 @@
                 </ul>
             </div>
         </nav>
-      
+        <div id="demo" class="carousel slide" data-ride="carousel">
+
+  <!-- Indicators -->
+  <ul class="carousel-indicators">
+    <li data-target="#demo" data-slide-to="0" class="active"></li>
+    <li data-target="#demo" data-slide-to="1"></li>
+    <li data-target="#demo" data-slide-to="2"></li>
+  </ul>
+
+  <!-- The slideshow -->
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="caro.jpg" class="d-block w-100">
+    </div>
+    <div class="carousel-item">
+      <img src="caro2.jpg" class="d-block w-100">
+      <div class="carousel-caption">
+          Welcome to Cameroon future of E-commerce
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="caro3.jpg" class="d-block w-100">
+    </div>
+  </div>
+
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#demo" data-slide="prev">
+    <span class="carousel-control-prev-icon"></span>
+  </a>
+  <a class="carousel-control-next" href="#demo" data-slide="next">
+    <span class="carousel-control-next-icon"></span>
+  </a>
+
+</div>
         <div class="jumbotron bg-white">
           <div class="row">
             <div class="col-md-2 col-sm-4" style="border: solid pink;">
@@ -40,7 +73,7 @@
               Content view
             </div>
             <div class="col-md-2 col-sm-2">
-              <a href="upload.html"><i class="fa fa-plus"></i></a>
+            <a class="badge badge-success" href="upload.html">Sell Product <i class="fa fa-plus"></i></a>
             </div>
         </div>
           
