--- a/upload.html
+++ b/upload.html
@@ -21,13 +21,12 @@
     <div class="row">
         <div class="form-container col-lg-4 col-md-6 col-sm-8 col-xs-12">
 
-                        
                     <form role="form" name="UploadForm">
-                        <div class="form-title">
-                            <center>
-                                <h3><a href="index.html" class="nav-link">EzzBuy</a></h3>
-                            </center>
-                        </div>   
+                         <div class="form-title">
+                                    <a href="index.html" class="nav-link">
+                                        <img src="log.jpg" height="100px" width="100px">
+                                    </a>
+                            </div>  
                         <div class="form-group ">
                                 <input id="productName" type="text" name="productName" placeholder="Enter Product Name"
                                     class="form-name form-control" >
