--- a/index.html
+++ b/index.html
@@ -43,15 +43,23 @@
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="caro.jpg" class="d-block w-100">
+      <div class="carousel-caption">
+          <p class='car'> Welcome to Kwatbato.... Where good and services are being bought and sold for free</p>
+          <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+          <span> <button class="btn btn-success" type="submit">Search</button> </span>
+      </div>
     </div>
     <div class="carousel-item">
       <img src="caro2.jpg" class="d-block w-100">
       <div class="carousel-caption">
-          Welcome to Cameroon future of E-commerce
+          <p class="car"> We are future of E-commerce in Cameroon</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="caro3.jpg" class="d-block w-100">
+      <div class="carousel-caption">
+         <p class="car"> Created for everyone not just business</p> 
+      </div>
     </div>
   </div>
 
