--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="carousel-item active">
       <img src="caro.jpg" class="d-block w-100">
       <div class="carousel-caption">
-          <p class='cara'> Welcome to Kwatbato.... Where good and services are being bought and sold for free</p>
+          <p> Welcome to Kwatbato.... Where good and services are being bought and sold for free</p>
           <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
           <span> <button class="btn btn-success" type="submit">Search</button> </span>
       </div>
@@ -52,13 +52,13 @@
     <div class="carousel-item">
       <img src="caro2.jpg" class="d-block w-100">
       <div class="carousel-caption">
-          <p class="cara"> We are future of E-commerce in Cameroon</p>
+          <p > We are future of E-commerce in Cameroon</p>
       </div>
     </div>
     <div class="carousel-item">
       <img src="caro3.jpg" class="d-block w-100">
       <div class="carousel-caption">
-         <p class="cara"> Created for everyone not just business</p> 
+         <p> Created for everyone not just business</p> 
       </div>
     </div>
   </div>
