--- a/index.html
+++ b/index.html
@@ -53,12 +53,16 @@
       <img src="caro2.jpg" class="d-block w-100">
       <div class="carousel-caption">
           <p > We are future of E-commerce in Cameroon</p>
+          <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+          <span> <button class="btn btn-success" type="submit">Search</button> </span>
       </div>
     </div>
     <div class="carousel-item">
       <img src="caro3.jpg" class="d-block w-100">
       <div class="carousel-caption">
          <p> Created for everyone not just business</p> 
+         <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+          <span> <button class="btn btn-success" type="submit">Search</button> </span>
       </div>
     </div>
   </div>
