--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <div class="carousel-item active">
       <img src="caro.jpg" class="d-block w-100">
       <div class="carousel-caption">
-          <p> Welcome to Kwatbato.... Where good and services are being bought and sold for free</p>
+          <p> Welcome to Kwatbato....</p> 
+          <p>Where good and services are being bought and sold for free</p>
           <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
           <span> <button class="btn btn-success" type="submit">Search</button> </span>
       </div>
