media screen and max-width

--- a/index.html
+++ b/index.html
@@ -30,53 +30,53 @@
                 </ul>
             </div>
         </nav>
+
+
         <div id="demo" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+          </ul>
+          <!-- The slideshow -->
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="caro.jpg" class="d-block w-100">
+              <div class="carousel-caption">
+                  <p> Welcome to Kwatbato....</p> 
+                  <p>Where good and services are being bought and sold for free</p>
+                  <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+                  <span> <button class="btn btn-success" type="submit">Search</button> </span>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="caro2.jpg" class="d-block w-100">
+              <div class="carousel-caption">
+                  <p > We are future of E-commerce in Cameroon</p>
+                  <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+                  <span> <button class="btn btn-success" type="submit">Search</button> </span>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="caro3.jpg" class="d-block w-100">
+              <div class="carousel-caption">
+                 <p> Created for everyone not just business</p> 
+                 <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
+                  <span> <button class="btn btn-success" type="submit">Search</button> </span>
+              </div>
+            </div>
+          </div>
 
-  <!-- Indicators -->
-  <ul class="carousel-indicators">
-    <li data-target="#demo" data-slide-to="0" class="active"></li>
-    <li data-target="#demo" data-slide-to="1"></li>
-    <li data-target="#demo" data-slide-to="2"></li>
-  </ul>
+          <!-- Left and right controls -->
+          <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </a>
+          <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </a>
 
-  <!-- The slideshow -->
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src="caro.jpg" class="d-block w-100">
-      <div class="carousel-caption">
-          <p> Welcome to Kwatbato....</p> 
-          <p>Where good and services are being bought and sold for free</p>
-          <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
-          <span> <button class="btn btn-success" type="submit">Search</button> </span>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="caro2.jpg" class="d-block w-100">
-      <div class="carousel-caption">
-          <p > We are future of E-commerce in Cameroon</p>
-          <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
-          <span> <button class="btn btn-success" type="submit">Search</button> </span>
-      </div>
-    </div>
-    <div class="carousel-item">
-      <img src="caro3.jpg" class="d-block w-100">
-      <div class="carousel-caption">
-         <p> Created for everyone not just business</p> 
-         <input type="text" name="search" placeholder="What are you looking for?.." class="form-control">
-          <span> <button class="btn btn-success" type="submit">Search</button> </span>
-      </div>
-    </div>
-  </div>
-
-  <!-- Left and right controls -->
-  <a class="carousel-control-prev" href="#demo" data-slide="prev">
-    <span class="carousel-control-prev-icon"></span>
-  </a>
-  <a class="carousel-control-next" href="#demo" data-slide="next">
-    <span class="carousel-control-next-icon"></span>
-  </a>
-
-</div>
+        </div>
         <div class="jumbotron bg-white">
           <div class="row">
             <div class="col-md-2 col-sm-4" style="border: solid pink;">
@@ -86,7 +86,7 @@
               Content view
             </div>
             <div class="col-md-2 col-sm-2">
-            <a class="badge badge-success" href="upload.html">Sell Product <i class="fa fa-plus"></i></a>
+            <a class="badge badge-success" href="upload.html">Sell Product <i class="fas fa-plus"></i></a>
             </div>
         </div>
           
